# drf_hw

./: .env.sample  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
fixture/: payments_data.json  user_data.json
lms/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_alter_course_description_alter_course_image_and_more.py  0004_alter_lesson_course.py  0005_course_owner_lesson_owner.py  0006_subscription.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: create_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_amount.py  0004_alter_payment_amount.py  0005_payment_link_to_payment_payment_session_id.py  0006_alter_payment_options.py  0007_alter_payment_user.py  0008_alter_payment_payment_method.py
