[tool.poetry]
name = "drf-hw"
version = "0.1.0"
description = ""
authors = ["m.romantsov <romancov_dzr@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
pillow = "^11.0.0"
unidecode = "^1.3.8"
isort = "^5.13.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
ipython = "^8.29.0"
drf-yasg = "^1.21.8"
forex-python = "^1.8"
stripe = "^11.2.0"
celery = "^5.4.0"
redis = "^5.2.0"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
